# MosaicKV

./: .dockerignore  .gitattributes  .gitmodules  AGENTS.md  README.md
mosaickv/: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.hf  Dockerfile.sglang  Dockerfile.vllm  PLAN.md  README.md  REPRODUCIBILITY.md  SCIENTIFIC_INTEGRITY.md  pyproject.toml
mosaickv/configs/: fullkv_onevision.toml  hf_lookm_reimpl.yaml  hf_mosaickv.yaml  hf_prefixkv_official_profile_validation.yaml  hf_prefixkv_reimpl.yaml  hf_simple_baseline.yaml  hf_vl_cache_reimpl.yaml  sglang_fullkv_3b.yaml  sglang_fullkv_7b.yaml  smoke.toml  vllm_fullkv.yaml
mosaickv/configs/experiments/: ablations.yaml  backend_generalization.yaml  main_performance.yaml  main_quality.yaml  pilot.yaml  repair.yaml
mosaickv/docs/: aaflow_isolation.md  backend_capability_matrix.md  baseline_fairness_audit.md  baseline_feasibility.md  block_utility_and_selection.md  cache_state.md  decode_time_repair.md  development.md  docker_verification.md  environment_and_worktree_policy.md  evaluation_harness.md  evidence_graph.md  fullkv_reference.md  future_query_forecasting.md  huggingface_adapters.md  huggingface_runtime.md  model_capability_matrix.md  repository_audit.md  sglang_backend.md  sglang_native_blocker.md  simple_baselines.md  three_tier_cache.md  verification_log.md  vllm_backend.md  vllm_native_blocker.md
mosaickv/docs/baselines/: lookm_parity_report.md  lookm_spec.md  prefixkv_parity_report.md  prefixkv_spec.md  vl_cache_spec.md
mosaickv/env/: README.md
mosaickv/env/common/: requirements.in
mosaickv/env/hf/: requirements.in
mosaickv/env/patches/: sglang-0.4.3.post4-transformers-4.49.patch
mosaickv/env/sglang/: requirements.in
mosaickv/env/vllm/: requirements.in
mosaickv/results/: baseline_budget_validation.parquet  vllm_hf_fullkv_parity.json
mosaickv/results/sglang/: README.md  ci-red_hf_fullkv_parity.json  ci-white_hf_fullkv_parity.json
mosaickv/scripts/: apply_env_patches.sh  assert_clean_worktree.sh  build_baseline_budget_validation.py  cache_env.sh  check.sh  compare_lookm_parity.py  compare_prefixkv_parity.py  compare_sglang_hf_fullkv.py  compare_vllm_hf_fullkv.py  create_envs.sh  docker_smoke.sh  expand_matrix.py  generate_prefixkv_profile.py  lock_common_env.sh  run_prefixkv_llava_parity.py  validate_matrix.py  verify_envs.py  verify_hf_adapters.py  verify_hf_runtime.py  verify_sglang_backend.py  verify_three_tier.py  verify_vllm_backend.py
mosaickv/slurm/: README.md  doctor_gpu.sbatch  env_smoke.sbatch  fullkv.sbatch  hf_adapter_smoke.sbatch  hf_runtime_progression.sbatch  lookm_reimpl_smoke.sbatch  mosaickv_array.sbatch  prefixkv_official_parity.sbatch  prefixkv_reimpl_smoke.sbatch  sglang_fullkv.sbatch  sglang_hf_fullkv_parity.sbatch  sglang_setup_and_fullkv.sbatch  three_tier_smoke.sbatch  vllm_fullkv.sbatch  vllm_hf_fullkv_parity.sbatch  vllm_setup_and_fullkv.sbatch
mosaickv/src/mosaickv/: __init__.py  cache_state.py  cli.py  config.py  doctor.py  experiment_matrix.py  fullkv.py  fullkv_cli.py  hf_cli.py  logging.py  manifest.py  sglang_cli.py  smoke.py  types.py  vllm_cli.py
mosaickv/src/mosaickv/adapters/: __init__.py  base.py  registry.py
mosaickv/src/mosaickv/backends/: __init__.py  hf_runtime.py  sglang_runtime.py  vllm_runtime.py
mosaickv/src/mosaickv/baselines/: __init__.py  lookm.py  lookm_parity.py  prefixkv.py  prefixkv_parity.py  selectors.py  types.py  vl_cache.py
mosaickv/src/mosaickv/evaluation/: __init__.py  (+10 more)
mosaickv/tests/gpu/: test_gpu_doctor.py  test_hf_checkpoint_parity.py
mosaickv/tests/integration/: test_cli.py  test_hf_tiny_models.py
mosaickv/tests/unit/: test_aaflow_isolation.py  test_baselines.py  test_cache_state.py  test_config.py  test_environment_specs.py  test_evaluation_harness.py  test_evaluation_results.py  test_evaluation_tasks.py  test_experiment_matrix.py  test_forecasting.py  test_fullkv_cli.py  test_fullkv_measurements.py  test_graph.py  test_hf_adapters.py  test_hf_runtime.py  test_lmms_adapter.py  test_logging.py  test_lookm_parity.py  test_lookm_reimpl.py  test_manifest.py  test_prefixkv_parity.py  test_prefixkv_reimpl.py  test_registry.py  test_repair.py  test_selection.py  test_sglang_cli.py  test_sglang_runtime.py  test_smoke.py  test_three_tier_cache.py  test_vl_cache_reimpl.py  test_vllm_cli.py  test_vllm_runtime.py
(+44 files in other folders)
