[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaickv"
version = "0.1.0.dev0"
description = "Research infrastructure for training-free multimodal KV-cache compression"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "MosaicKV contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = ["numpy>=1.26,<3"]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pre-commit>=3.7,<5",
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]
evaluation = [
  "lmms-eval==0.7.2",
  "pyarrow>=25,<26",
]

[project.scripts]
mosaickv = "mosaickv.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mosaickv.evaluation.data" = ["*.jsonl"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "gpu: requires a CUDA-capable Slurm allocation",
  "integration: exercises installed CLI entry points",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "scripts/verify_envs.py"]
pretty = true
show_error_codes = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*", "pyarrow", "pyarrow.*", "torch", "torch.*"]
ignore_missing_imports = true
